testdata/baselines/reference/submodule/conformance/instantiateTemplateTagTypeParameterOnVariableStatement.errors.txt
instantiateTemplateTagTypeParameterOnVariableStatement.js(3,12): error TS2304: Cannot find name 'T'.
instantiateTemplateTagTypeParameterOnVariableStatement.js(4,18): error TS2304: Cannot find name 'T'.
instantiateTemplateTagTypeParameterOnVariableStatement.js(4,24): error TS2304: Cannot find name 'T'.


==== instantiateTemplateTagTypeParameterOnVariableStatement.js (3 errors) ====
    /**
     * @template T
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @returns {(b: T) => T}
                     ~
!!! error TS2304: Cannot find name 'T'.
                           ~
!!! error TS2304: Cannot find name 'T'.
     */
    const seq = a => b => b;
    
    const text1 = "hello";
    const text2 = "world";
    
    /** @type {string} */
    var text3 = seq(text1)(text2);
    